tests/errors/spread-no-operand/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0022]: Expected an expression after `...`.
  │
1 │ def xs = [1, 2, ...]
  │                 ^^^
  ╰─𜱶 tests/errors/spread-no-operand/main.pa:1:17
